http://winmerge.org/tracker/[tracker-id]

WinMerge 2.3.11
  Write config log as UTF-8 file (r7057)
  Update PCRE to version 8.00 (r7068)
  Bugfix: Plugin error after interrupting folder compare (#2919475)
  Bugfix: GUI Word Wrap missing text (#2921400, #2894033)
  Bugfix: Selected custom odepage was not used (#2921555)
  Bugfix: Created new matching folder to wrong folder (#2890961)

WinMerge 2.13.10 2009-12-21 (r7051)
  Visual Studio project files upgraded to VS2005 format (r7045)
  Bugfix: New Persian translation don't work (#2884856)
  Bugfix: German shortcut key conflict resolution (#2894257)
  Bugfix: More details to in-line difference highlighting (#2876480)

WinMerge 2.13.9 - 2009-10-22 (r7025)
  Update PCRE to version 7.9 (r6903)
  Improve color options organization (#2818451)
  Improve character-level difference highlight accuracy (#2723613)
  Add new options dialog panel for folder compare options (#2819626)
  Allow disabling reading of unique folder contents (#2820067)
  Add options GUI for quick compare limit (#2825628)
  Add accelerator keys for Shell context menu (#2823536)
  Add /xq command line switch for closing WinMerge after identical files
    and not showing message (#2827836)
  Add missing keywords to Pascal highlighter (#2834192)
  Bugfix: Did not export changed options values (#2799149)
  Bugfix: Don't highlight identical words if whitespaces are ignored (#2798360)
  Bugfix: Did not reset folder compare method back to original (#2803152)
  Bugfix: Added EOL chars between copied file/path names (#2817546)
  Bugfix: In-line difference highlight fixes (#2824173)
  New translation: Persian (#2877121)
  Translation updates:
  - Dutch (#2801690, #2804979, #2828310)
  - French (#2850842)
  - German (r6942)
  - Japanese (r6996)
  - Polish (#2858673)
  - Swedish (#2805726, #2845755)
  - Turkish (#2825130, #2825132, #2827820)
  - Ukrainian (#2817835)

WinMerge 2.13.8 - 2009-05-26 (r6791)
  Move executable translations to /Translations/WinMerge (r6754)